--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "used-book-searchengine",
-  "version": "1.0.0",
+  "name": "cheknawa",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
+    "https": "^1.0.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11"
@@ -37,6 +38,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
+    "globals": {
+      "kakao": false
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     },
