--- a/project/backend/requirements.txt
+++ b/project/backend/requirements.txt
@@ -10,11 +10,11 @@ Flask-RESTful==0.3.8
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
-lxml==4.6.3
+lxml>=4.6.3
 MarkupSafe==1.1.1
 pytz==2021.1
 requests==2.25.1
 six==1.15.0
 soupsieve==2.2
-urllib3==1.26.4
+urllib3>=1.26.4
 Werkzeug==1.0.1
